# DelftDashboard

./: .gitignore  README.md  clone_repos_ddb.ps1  delftdashboard_environment.yml  hurrywave.bds  hurrywave.bhs  hurrywave.bnd  hurrywave.btp  hurrywave.bwd  hurrywave.dep  hurrywave.msk  hurrywave.wbl  make_enviroment.readme  mkenv_ddb.ps1  pyproject.toml  pyproject.toml.ori  run.bat  sfincs.bnd  sfincs.bzs  sfincs.nc  update_repos_ddb.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yaml  feature_request.yml  user_bug_report.yaml  user_bug_report.yml
ddb/: delftdashboard.ini.edit_me
ddb/data/bathymetry/: bathymetry.tml
ddb/data/tide_models/: tide_models.tml
ddb/data/tropical_cyclones/: cyclone_track_datasets.tml
distribution/: LICENSE.txt  README.md  build_executable.py  build_installer.py  config.py  data_catalog.yml  data_instructions.txt  delftdashboard.ini  how-to-include-data-instructions.txt  make_installer_script.iss  rth-delftdashboard.py
distribution/spec/: Delft Dashboard.spec  FloodAdapt Modelbuilders.spec
docs/: make.bat
docs/source/: conf.py  data_catalogs.rst  getting_started.rst  index.rst  installation.rst
docs/source/models/: delft3dfm.rst  hurrywave_hmt.rst  index.rst  sfincs_hmt.rst
docs/source/toolboxes/: bathymetry.rst  drawing.rst  flood_map.rst  index.rst  meteo.rst  model_database.rst  modelmaker_delft3dfm.rst  modelmaker_hurrywave_hmt.rst  modelmaker_sfincs_hmt.rst  nesting.rst  observation_stations.rst  tide_stations.rst  tiling.rst  tropical_cyclone.rst  watersheds.rst
installer/: DelftDashboard.spec  build_installer.py  build_pyinstaller.py  delftdashboard.iss  post_install.bat  readme.txt  requirements_minimal.txt
run/: _start_ddb.py  delftdashboard.bat  delftdashboard_dev.bat  delftdashboard_miniforge.bat  install_delftdashboard.bat  install_delftdashboard_miniforge.bat  readme.txt  update_delftdashboard.bat  update_delftdashboard_miniforge.bat
run/experts_only/: clone_repos_ddb.bat  delftdashboard_dev.bat  install_delftdashboard_custom.bat  install_delftdashboard_dev.bat  update_repos_ddb.bat
src/: Combinear.qss  ddb.py  ddb_coordinate_system.py  ddb_gui.py  ddb_initialize.py  ddb_map.py  ddb_menu.py  ddb_model.py  ddb_toolbox.py  delftdashboard.ini  delftdashboard.py  makeenv.bat  mapbox_token.txt  menu_topography.py  menu_view.py  xml2yml.py
src/config/: delftdashboard.ini
src/delftdashboard/: Steps to run the FloodAdapt Modelbuilder.md  __init__.py  app.py  delftdashboard.bat  delftdashboard.ini  delftdashboard.ini.edit_me  delftdashboard.pth.edit_me  delftdashboard.pth.ori  delftdashboard_compile.spec  delftdashboard_gui.py  install.py  install_delftdashboard.bat  model_setup.yml  run_ddb.bat  start_ddb.py  start_delftdashboard.py
src/delftdashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/delftdashboard/config/: Combinear.qss  Diffnes.qss  census_key.txt  default_data_catalog.yml  delftdashboard.cfg  delftdashboard.ini  delftdashboard.ini.ori  delftdashboard_FA.ini  user_data_catalog.yml
src/delftdashboard/config/colormaps/: earth.txt
src/delftdashboard/env/: ddb_FloodAdapt.yml  ddb_dev.yml  ddb_fiat.yml  ddb_floodadapt.yml  ddb_sfincs.yml
src/delftdashboard/layers/: layers.py
src/delftdashboard/layers/config/: layers.yml
src/delftdashboard/menu/: __init__.py  coordinate_system.py  file.py  help.py  model.py  toolbox.py  topography.py  view.py
src/delftdashboard/misc/: gdfutils.py  xml2yml.py
src/delftdashboard/misc/cyclone_track_selector/: cyclone_track_selector.py  cyclone_track_selector.yml
src/delftdashboard/misc/select_other_geographic/: callbacks.py  select_geographic_crs.py  select_other_geographic.yml
src/delftdashboard/misc/select_other_projected/: callbacks.py  select_other_projected.yml  select_projected_crs.py
src/delftdashboard/misc/select_utm_zone/: callbacks.py  utm_zone.yml
src/delftdashboard/misc/select_watershed/: callbacks.py  watershed.yml
src/delftdashboard/misc/view_settings/: callbacks.py  misc.yml  topography.yml  view_settings.yml
src/delftdashboard/models/delft3dfm/: __init__.py  boundary_conditions.py  delft3dfm.py  domain.py  generic.py  meteo.py  observation_points_crs.py  observation_points_regular.py  observation_points_spectra.py  structures_thin_dams.py  timeframe.py
src/delftdashboard/models/dwave/: generate_wave_grids.py  grid_params.toml  rgfgrid.py  rgfgrid_utils.py
src/delftdashboard/models/fiat/: boundary_conditions.py  create_model_create_model.py  create_model_view_model.py  domain.py  equity.py  fiat.py  (+28 more)
src/delftdashboard/operations/: __init__.py  bathy_topo_selector.py  checklist.py  colormap.py  colormap.py.old  gui.py  initialize.py  map.py  model.py  toolbox.py  topography.py  update.py
src/delftdashboard/run/: delftdashboard.bat  delftdashboard.py  make_env.bat
src/delftdashboard/setup/: INSTRUCTIONS FOR MAKING EXECUTABLE.txt  INSTRUCTIONS_PLEASE_READ.txt  setup.bat  setup.ps1
src/delftdashboard/setup_executable/: build_executable.py  delftdashboard_compile.spec
src/menu/: coordinate_system.py  file.py  help.py  model.py  toolbox.py  view.py
src/misc/select_utm_zone/: callbacks.py  utm_zone.yml
src/models/hurrywave/: boundary_conditions.py  ddb_hurrywave.py  ddb_hurrywave_domain.py  ddb_hurrywave_timeframe.py  domain.py  hurrywave.py  meteo.py  observation_points.py  physics_meteo.py  physics_roughness.py  timeframe.py
src/models/sfincs/: ddb_sfincs.py  ddb_sfincs_boundary_conditions.py  ddb_sfincs_domain.py  ddb_sfincs_meteo.py  ddb_sfincs_numerics.py  ddb_sfincs_physics_meteo.py  ddb_sfincs_physics_roughness.py  ddb_sfincs_waves_snapwave.py  domain.py  numerics.py  sfincs.py
src/operations/: gui.py  initialize.py  map.py  model.py  toolbox.py
src/toolboxes/drawing/: drawing.py
src/toolboxes/modelmaker_hurrywave/: bathymetry.py  domain.py  mask_active_cells.py  mask_boundary_cells.py  modelmaker_hurrywave.py
src/toolboxes/modelmaker_sfincs/: bathymetry.py  domain.py  mask_active_cells.py  mask_boundary_cells.py  modelmaker_sfincs.py  quadtree.py  roughness.py
(+520 files in other folders)
